# ha-fireboard

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_ENVIRONMENT.md  LICENSE  QUICK_START.md  README.md  SECURITY.md  STATUS.md  TESTING_GUIDE.md  coverage.xml  hacs.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup_github.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
custom_components/fireboard/: __init__.py  api_client.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  mqtt_client.py  sensor.py  strings.json
docs/: sample_api_response_FBXPD.json
tests/: __init__.py  conftest.py  mock_homeassistant.py  test_api_client.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py  test_mqtt_client.py  test_sensor.py
tests/fixtures/: api_responses.json
